feat: introduce /api/v1/oe/blockbyheight API call to get block header by height
